--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello, world! This is my personal page hosted on GitHub pages.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Eventify | Event Management</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+    <h1>Eventify</h1>
+    <p>Your One-Stop Event Management Platform</p>
+</header>
+
+<section class="banner">
+    <img src="images/banner.jpg" alt="Event banner">
+</section>
+
+<section class="about">
+    <h2>About Us</h2>
+    <p>
+        Eventify helps you plan, manage, and enjoy events effortlessly.
+        From corporate meetings to music festivals, we handle it all.
+    </p>
+</section>
+
+<section class="events">
+    <h2>Upcoming Events</h2>
+
+    <div class="event-card">
+        <img src="images/event1.jpg" alt="Music Concert">
+        <h3>Live Music Concert</h3>
+        <p>Date: March 15, 2026</p>
+        <p>Location: New York City</p>
+    </div>
+
+    <div class="event-card">
+        <img src="images/event2.jpg" alt="Business Conference">
+        <h3>Business Conference</h3>
+        <p>Date: April 10, 2026</p>
+        <p>Location: San Francisco</p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2026 Eventify. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
+
