Add event management site frontend

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2026 Eventify. All rights reserved.</p>
+    <p>&copy; 2026 Eventify-Rutuja. All rights reserved.</p>
 </footer>
 
 </body>
