--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <p>Location: San Francisco</p>
     </div>
 </section>
+    
+<button onclick="location.href='index2.html'">Go to Page 2</button>
 
 <footer>
     <p>&copy; 2026 Eventify-Rutuja. All rights reserved.</p>
