--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <section id="splash" class="page active" tabindex="-1" aria-hidden="false">
     <h2>Welcome to EventHub</h2>
     <p>Your simple event management system.</p>
-    <button onclick="goTo('login')">Get Started</button>
+    <!-- <button onclick="goTo('login')">Get Started</button>-->
+    <button onclick="window.location.href='Page2.html'">Get Started</button>
   </section>
 
   <!-- LOGIN -->
@@ -95,7 +96,7 @@
   <!-- PROFILE -->
   <section id="profile" class="page" tabindex="-1" aria-hidden="true">
     <h2>Profile / Settings</h2>
-    <p>Name: Bunny</p>
+    <p>Name: </p>
 
     <button onclick="goTo('myEvents')">My Events</button>
     <button onclick="goTo('dashboard')">Back</button>
