--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
       <li>Manage tickets</li>
     </ul>
 
-    <button onclick="window.location.href='Page2.html'">Get Started</button>
+    <!-- <button onclick="window.location.href='Page2.html'">Get Started</button>-->
+    <button onclick="goTo('login')">Get Started</button>
   </section>
 
   <!-- LOGIN -->
-  <section id="login" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="login" class="page" tabindex="-1" aria-hidden="true">
     <h2>Login / Sign Up</h2>
 
     <form onsubmit="goTo('dashboard'); return false;" aria-label="Login form">
@@ -52,14 +53,15 @@
       <label for="password">Password</label>
       <input id="password" type="password" required aria-required="true">
 
-      <button type="submit">Login</button>
+      <!--<button type="submit">Login</button>-->
+      <button onclick="goTo('dashboard')">Login</button>
     </form>
 
     <button onclick="goTo('splash')">Back</button>
   </section>
 
   <!-- DASHBOARD -->
-  <section id="dashboard" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="dashboard" class="page" tabindex="-1" aria-hidden="true">
     <h2>Dashboard</h2>
 
     <nav aria-label="Dashboard navigation">
@@ -72,7 +74,7 @@
   </section>
 
   <!-- BROWSE EVENTS -->
-  <section id="browse" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="browse" class="page" tabindex="-1" aria-hidden="true">
     <h2>Browse Events</h2>
 
     <article class="event-card">
@@ -95,7 +97,7 @@
   </section>
 
   <!-- EVENT DETAILS -->
-  <section id="eventDetails" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="eventDetails" class="page" tabindex="-1" aria-hidden="true">
     <h2>Event Details</h2>
 
     <p><strong>Music Festival</strong></p>
@@ -126,7 +128,7 @@
   </section>
 
   <!-- CREATE EVENT -->
-  <section id="createEvent" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="createEvent" class="page" tabindex="-1" aria-hidden="true">
     <h2>Create Event</h2>
 
     <form onsubmit="goTo('myEvents'); return false;">
@@ -147,7 +149,7 @@
   </section>
 
   <!-- PROFILE -->
-  <section id="profile" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="profile" class="page" tabindex="-1" aria-hidden="true">
     <h2>Profile / Settings</h2>
 
     <p>Name: John Doe</p>
@@ -158,7 +160,7 @@
   </section>
 
   <!-- MY EVENTS -->
-  <section id="myEvents" class="page active" tabindex="-1" aria-hidden="true">
+  <section id="myEvents" class="page" tabindex="-1" aria-hidden="true">
     <h2>My Events / Tickets</h2>
 
     <ul>
